# exp_trajtimeopti

./: CMakeLists.sublime-workspace  CMakeLists.txt  package.xml
include/pcd_trajectory/: bezier_base.h  dataType.h  gridNode.h  path_finder.h  qp_generator.h  rrgDataType.h  rrgPathFinder.h  sMatrixUtils.h  timeAllocator.h  time_optimizer.h  trajectory_generator.h  trajectory_generator_discrete.h  trajectory_generator_lite.h  trajectory_generator_socp_lite.h
include/pcd_trajectory/no use/: trajectory_generator_socp.h
launch/: benchmark.launch  dynamic.launch  laser.launch  mesh.launch  qcqp_tra.launch  random_map.launch  simulation.launch  time_optimal.launch
launch/rviz_config/: rviz_config.rviz  time_optimal.rviz
script/: calc_data.py  collect_data.py  draw_data.py  test.py
src/: bezier_base.cpp  convert_plot.cpp  path_finder.cpp  pcd_planner.sublime-project  pcd_planner.sublime-workspace  pcd_trajectory_node.cpp  qp_generator.cpp  random_map.cpp  rrgPathFinder.cpp  simulation_test.cpp  test_any.cpp  test_solver.cpp  time_optimal_node.cpp  time_optimal_node2.cpp  time_optimal_traj_server.cpp  time_optimizer.cpp  trajectory_generator.cpp  trajectory_generator_discrete.cpp  trajectory_generator_lite.cpp  trajectory_generator_socp_lite.cpp  waypoint_publisher.cpp
src/debug_only/: code.cpp  cut_pcd.cpp  ecos_trajectory.cpp  gicp_icp.cpp  kinodynamic_Astar_test.cpp  qcqo1.cpp  qp_generator.cpp  solver.cpp  test_icp.cpp  test_solver.cpp  trajectory_generator_socp.cpp
